--- a/curriculo.html
+++ b/curriculo.html
@@ -1,17 +1,66 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedro Rogério Braga Rolim</title>
-</head>
-<body>
-    <header>
-        <h1>Pedro Rogério Braga Rolim</h1>
-        <p>Olá, sou Pedro Rogério, atualmente estou cursando Analise e Desenvolvimento de Sistemas pelo IFPB - CZ. 
-            <br>Começei na programação em 2022 com Python, pois fiz o curso de Informática Inegrado ao Ensino Médio no IFPB - CZ.
-            <br>Meu foco atual é aprender desenvolvimento em geral, tanto front-end quanto back-end.
-        </p>
-    </header>
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Pedro Rogério Braga Rolim</title>
+    </head>
+    <body>
+        <header>
+            <h1>Pedro Rogério Braga Rolim</h1>
+            <p>Olá, sou Pedro Rogério, atualmente estou cursando Análise e Desenvolvimento de Sistemas pelo IFPB - CZ. 
+                <br>Começei na programação em 2022 com Python, pois fiz o curso de Informática Inegrado ao Ensino Médio no IFPB - CZ.
+                <br>Meu foco atual é aprender desenvolvimento em geral, tanto front-end quanto back-end.
+            </p>
+        </header>
+        <hr>
+        <h2>Contatos:</h2>
+        <address>
+            <p>Email: <a href="mailto:rogerio.pedro@academico.ifpb.edu.br" target="_blank">rogerio.pedro@academico.ifpb.edu.br</a></p>
+            <p>Telefone: (83) 99158-9466</p>
+            <p>Cidade: Cajazeiras, PB</p>
+            <p>Linkedin: <a href="https://www.linkedin.com/in/pedro-rogerio-braga" target="_blank">Linkedin</a></p>
+            <p>Github: <a href="https://github.com/kaserzin" target="_blank">Github</a></p>
+        </address>
+        <hr>
+        <section>
+            <h2>Formação Acadêmica</h2>
+            <ul>
+                <li>
+                    <strong>Instituto Federal da Paraiba</strong>
+                    <br>Curso Técnico de Informática integrado ao Ensino Médio
+                    <br>Concluido: 2024<br>
+                    <br>Tecnólogo em Análise e Desenvolvimento de Sistemas
+                    <br>Conclusão Prevista: 2028
+                </li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>Experiencia</h2>
+            <ul>
+                <li>
+                    <strong>Estágio no IFPB - CZ</strong><br>
+                    Estágio na CERE<br>
+                    Março - Julho 2024<br>
+                    Atividade: Desenvolvimento de um aplicativo móvel para resolução de problemas <br> no preenchimento dos termos de compromisso de estágio.
+                </li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>Habilidade Técnicas</h2>
+            <ul>
+                <li>
+                    Conhecimentos em Python, C e HTML.
+                </li>
+
+                <li>
+                    Conhecimentos em Git e GitHub.
+                </li>
+                <li>Conhecimentos no micro framework Flask</li>
+            </ul>
+        </section>
+
+    </body>
+    </html>
