--- a/curriculo.html
+++ b/curriculo.html
@@ -61,6 +61,11 @@
                 <li>Conhecimentos no micro framework Flask</li>
             </ul>
         </section>
-
+        <hr>
+        <footer>
+            <p>Data da última atualização: 25/10/2025</p>
+            <p>"O sucesso é a soma de pequenos esforços."</p>
+            <p>Desenvolvido por Pedro Rogério</p>
+        </footer>
     </body>
     </html>
